--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "fs": "0.0.1-security",
     "html-webpack-plugin": "^2.30.1",
     "mockjs": "^1.0.1-beta3",
     "node-loader": "^0.6.0",
