--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "element-ui": "^2.4.6",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.0",
+    "quill": "^1.3.7",
     "vue": "^2.6.11",
     "vue-i18n": "^8.0.0",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
