--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.4.6",
+    "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.0",
     "quill": "^1.3.7",
@@ -19,7 +20,8 @@
     "vue-i18n": "^8.0.0",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "xlsx": "^0.16.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
